--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 import { fetchProducts, fetchKepka, getAssetUrl } from "../../lib/directus";
 import { CloudinaryImage } from "../../components/ui/CloudinaryImage";
+import PageHeader from "../../components/PageHeader.astro";
 
 // Product type definition
 interface Product {
@@ -44,35 +45,11 @@ const pageTitle = "Shop | " + (kepkaData?.title || "Jakub Kepka");
 
 <MainLayout title={pageTitle}>
   <main class="bg-white dark:bg-black">
-    {/* Hero section */}
-    <section class="py-24 bg-black text-white relative overflow-hidden">
-      {coverImageUrl && (
-        <div class="absolute inset-0 opacity-60 z-0">
-          <img 
-            src={coverImageUrl} 
-            alt="Shop Cover" 
-            class="w-full h-full object-cover object-top"
-          />
-          {/* Dark overlay */}
-          <div class="absolute inset-0 bg-black opacity-60"></div>
-        </div>
-      )}
-      
-      <div class="container mx-auto px-6 lg:px-16 relative z-10">
-        <h1 class="text-6xl md:text-8xl font-display font-bold tracking-tight mb-4">
-          SHOP
-        </h1>
-        <a 
-          href="/" 
-          class="inline-flex items-center gap-2 text-sm text-white/80 hover:text-white transition-colors"
-        >
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
-          </svg>
-          Back to home
-        </a>
-      </div>
-    </section>
+    <PageHeader 
+      title="SHOP" 
+      coverImage={coverImageUrl} 
+      imageAlt="Shop Cover"
+    />
     
     {/* Products grid */}
     <section class="py-24">
