--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,3 +39,13 @@ const pageTitle = kepkaData?.title || "Jakub Kepka";
 	<LatestPhotoshoots photoshoots={photoshoots} client:load />
 	<CategorySelection kepkaData={kepkaData} client:load />
 </MainLayout>
+
+<html lang="en">
+  <head>
+    <!-- Add placeholder script for fallback images -->
+    <script is:inline src="/placeholder.js"></script>
+  </head>
+  
+  <body>
+  </body>
+</html>
