--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -26,7 +26,7 @@ const { title, coverImage = null, imageAlt = "Cover Image" } = Astro.props;
   )}
   
   <div class="container mx-auto px-6 lg:px-16 relative z-10">
-    <h1 class="text-6xl md:text-8xl font-formula-condensed font-black tracking-tight mb-4 uppercase">
+    <h1 class="text-6xl md:text-8xl font-impact tracking-tight mb-4 uppercase">
       {title}
     </h1>
     <a 
